--- a/css/theme.css
+++ b/css/theme.css
@@ -6,7 +6,8 @@
  **/
 
 /* dialogs */
-.std42-dialog, .std42-dialog .ui-widget-content { background-color:#ededed; background-image:none; background-clip: content-box; }
+.std42-dialog { padding: 0;}
+.std42-dialog, .std42-dialog .ui-widget-content { background-color:#ededed; background-image:none; }
 
 /* navbar */
 .elfinder .elfinder-navbar { background:#dde4eb; }
